karnc/tests/fixtures/positive/78_orders_payment_skeleton/src/commerce/money.karn
commons commerce.money

type Money = {
  minorUnits: Int where NonNegative,
  currency:   String where Length(3),
}
