karnc/tests/fixtures/negative/174_json_uncodable/input.karn
commons bad {
  fn f() -> String {
    Json.encode((x: Int) => x)
  }
}
